--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
                 <a href="mailto:denisykolga@gmail.com" target="_blank">Gmail</a>
             </div>
         </header>
-
-
-
-        <section class="education_block">
+        <section id="panel" class="education_block">
             <div class="education_block__nav">
                 <p class="education_block__text">Education</p>
                 <p class="education_block__arrow">&uarr;</p>
             </div>
-            <div class="education_block__content hide">
+            <div id="show" class="education_block__content hide">
                 <ul class="education_block__list">
                     <li class="education_block__list-item">School: 1988-2001</li>
                     <li class="education_block__list-item">University: 2001-2006</li>
@@ -38,64 +35,36 @@
                 </ul>
             </div>
         </section>
-
-
-
-        <div class="swiper">
-            <h2 class="swiper-title">Projects</h2>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-
-            <div class="swiper-wrapper">
-                <div class="swiper-slide swiper_slide">
-                    <div class="swiper_slide-about hide-description swiper_slide-about_first">
-                        <h2 class="swiper_slide-title">theyalow</h2>
-                        <ul class="swiper_slide-list">
-                            <li class="swiper_slide-item">the project should be close to the source file</li>
-                            <li class="swiper_slide-item">care about the interactivity of elements, backgrounds and colors</li>
-                            <li class="swiper_slide-item">use .psd files for the project and apps for them</li>
-                        </ul>
-                        <div class="swiper_slide-click">
-                            <p class="swiper_slide-click_text">Click on image to see the project</p>
-                            <img src="assets/arrow-right-big.svg" alt="arrow right" class="swiper_slide-click_img">
-                        </div>
-                    </div>
-                    <div class="swiper_slide-image swiper_slide-image_first" onClick="window.location='projects/theyalow/index.html'">
-                      <div class="swiper_slide-image_click">
-                        <p class="swiper_slide-image_click_text">show desc</p>
-                        <button type="button" name="button" class="swiper_slide-image_click_dot first_dot"></button>
-                      </div>
-                      <p class="swiper_slide-image_swipe_text">swipe to see other</p>
+        <!-- Carousel -->
+        <div class="carousel-container">
+        <div class="carousel">
+            <div class="item-container">
+                <div class="item active">
+                    <div class="description">
+                        <div class="project-name">Theyalow</div>
+                            <img src="./assests/img/theyalow_desc.jpg" alt="Theyalow">
                     </div>
                 </div>
-
-                <div class="swiper-slide swiper_slide">
-                    <div class="swiper_slide-about hide-description swiper_slide-about_second">
-                        <h2 class="swiper_slide-title">repair-design-project</h2>
-                        <ul class="swiper_slide-list">
-                            <li class="swiper_slide-item">the project should be responsive</li>
-                            <li class="swiper_slide-item">care about the interactivity of elements</li>
-                            <li class="swiper_slide-item">use validation on not empty input fields with correct type</li>
-                        </ul>
-                        <div class="swiper_slide-click">
-                            <p class="swiper_slide-click_text">Click on image to see the project</p>
-                            <img src="assets/arrow-right-big.svg" alt="arrow right" class="swiper_slide-click_img">
-                        </div>
-                    </div>
-                    <div class="swiper_slide-image swiper_slide-image_second">
-                        <div class="swiper_slide-image_click">
-                          <p class="swiper_slide-image_click_text">show desc</p>
-                          <button type="button" name="button" class="swiper_slide-image_click_dot second_dot"></button>
-                        </div>
-                        <p class="swiper_slide-image_swipe_text">swipe to see other</p>
+                <div class="item">
+                    <div class="description">
+                        <div class="project-name">Repair Design Project</div>
+                            <img src="./assests/img/repair_desc.jpg" alt="Repair Design Project">
                     </div>
                 </div>
-
+            </div>
+            <div class="control left">
+                <div class="arrow left">&lt;</div>
+            </div>
+            <div class="control right">
+                <div class="arrow right">&gt;</div>
             </div>
         </div>
     </div>
+        <!-- End of Carousel -->
+    </div>
 
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="main.js"></script>
     <script src="swiper.js"></script>
 
 </body>
